bpo-44298: Fix line numbers for early exits in with statements. (GH-26513)